# LnkShrt

./: .gitignore  Caddyfile  README.md  docker-compose.yml  tmp.html  zygoat_settings.yml
.github/workflows/: build.yml  ci-cd.yml  playwright-tests.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/backend/: serializers.py  settings.py  urls.py  views.py
backend/shortener/: models.py  serializers.py  urls.py  views.py
backend/shortener/migrations/: 0001_initial.py  0002_link_delete_links.py  0003_remove_link_short_link.py  0004_rename_long_link_link_link.py  0005_link_owner.py
frontend/: Dockerfile  Dockerfile.local  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/components/: QueryRoot.js  error.js  errorText.js  linkCopy.js  linkEdit.js  linkList.js  login.js  manage_account.js  pageList.js  pagination.js  shortener.js  signup.js
frontend/app/login/: page.js
frontend/app/manage/: layout.js  page.js
frontend/app/manageAccount/: layout.js  page.js
frontend/app/remove/: layout.js  page.js
frontend/app/signup/: layout.js  page.js
frontend/tests/: pageElement.test.js
